--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52862,3 +52862,269 @@ body {
     opacity: 1;
   }
 }
+@keyframes keyframe_1fk160q {
+  0%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+  30%,
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes dot {
+  0%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+
+  30%,
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes animation-64e8c8 {
+  from {
+    opacity: 0.09049773755656108;
+  }
+
+  to {
+    opacity: 0.15384615384615385;
+  }
+}
+
+@supports ((-webkit-appearance: none) or (appearance: none)) {
+  @media (hover: hover) {
+    @supports ((-webkit-appearance: none) or (appearance: none)) {
+    }
+  }
+}
+
+@supports ((-webkit-appearance: none) or (appearance: none)) {
+  @media (hover: hover) {
+    @supports ((-webkit-appearance: none) or (appearance: none)) {
+    }
+  }
+}
+
+.dir.uyl8mnh[class][class] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+@keyframes animation-64e8c8 {
+  from {
+    opacity: 0.09049773755656108;
+  }
+
+  to {
+    opacity: 0.15384615384615385;
+  }
+}
+._1gh8ie6 {
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._1pz1yyw {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+}
+._1pz1yyw:not(:first-child) {
+  padding-top: 4px !important;
+}
+._1aoj0ap {
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  box-sizing: border-box !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 4px !important;
+  border-radius: 8px !important;
+}
+._159914b {
+  color: inherit !important;
+  display: block !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
+  outline: none !important;
+  border: none !important;
+  margin: 0px !important;
+  box-sizing: border-box !important;
+  background-color: transparent !important;
+  appearance: none !important;
+  padding: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+._pxnjg {
+  display: flex !important;
+  color: rgb(113, 113, 113) !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+}
+._25bp3z {
+  border: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+._1wjt7fx {
+  margin-bottom: 8px !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+}
+._ttgom0 {
+  position: relative !important;
+  display: flex !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 8px !important;
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+._19nw8j1 {
+  position: relative !important;
+  flex: 1 1 auto !important;
+  padding: 0px !important;
+}
+._zhftk97 {
+  position: absolute !important;
+  top: 18px !important;
+  left: 12px !important;
+  right: 12px !important;
+  margin: 0px !important;
+  padding: 0px 24px 0px 0px !important;
+  color: rgb(113, 113, 113) !important;
+  pointer-events: none !important;
+  transform-origin: 0% 0% !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+  transform: translateY(-8px) scale(0.75) !important;
+  font-weight: 400 !important;
+}
+._1iwku6d {
+  min-height: 56px !important;
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 26px 36px 10px 12px !important;
+  background-color: transparent !important;
+  color: inherit !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+}
+._gw4xx4 {
+  color: rgb(34, 34, 34) !important;
+  cursor: inherit !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._1imhiqqh {
+  color: rgb(113, 113, 113) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  word-break: break-word !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  margin-top: 2px !important;
+}
+._g4rlqtx {
+  cursor: pointer !important;
+  box-sizing: border-box !important;
+  height: 22px !important;
+  width: 22px !important;
+  margin: 0px !important;
+}
+@supports (-webkit-appearance: none) or (-moz-appearance: none) or
+  (appearance: none) {
+  ._g4rlqtx {
+    appearance: none !important;
+    border-style: solid !important;
+    overflow: hidden !important;
+    border-radius: 50% !important;
+    vertical-align: top !important;
+    outline: none !important;
+    border-color: rgb(34, 34, 34) !important;
+    border-width: 7px !important;
+    background: white !important;
+  }
+}
+._83s1a2 {
+  cursor: pointer !important;
+  box-sizing: border-box !important;
+  height: 22px !important;
+  width: 22px !important;
+  margin: 0px !important;
+}
+@supports (-webkit-appearance: none) or (-moz-appearance: none) or
+  (appearance: none) {
+  ._83s1a2 {
+    appearance: none !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: rgb(176, 176, 176) !important;
+    background: rgb(255, 255, 255) !important;
+    overflow: hidden !important;
+    border-radius: 50% !important;
+    vertical-align: top !important;
+    outline: none !important;
+  }
+}
+._u1thwpg {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  color: rgb(34, 34, 34) !important;
+  text-decoration: none !important;
+  outline: none !important;
+}
+
+._hi9sy {
+  color: rgb(113, 113, 113) !important;
+  margin-top: 4px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  word-break: break-word !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
