--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,11 +1,11 @@
-._1mqc21n {
+.become-a-host__count-action-wrapper {
   margin-left: 16px!important
 }
 .account-container-mb__header-profile-wrapper,
 .mb2 {
   margin-bottom: 16px!important
 }
-._1mqc21n,
+.become-a-host__count-action-wrapper,
 .ml2 {
   margin-left: 16px!important
 }
