--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15714,14 +15714,14 @@ fieldset[disabled] .btn {
   box-shadow: rgb(255 255 255 / 80%) 0 0 0 2px !important;
 }
 
-._1mqc21n {
+.become-a-host__count-action-wrapper {
   margin-left: 16px!important
 }
 .account-container-mb__header-profile-wrapper,
 .mb2 {
   margin-bottom: 16px!important
 }
-._1mqc21n,
+.become-a-host__count-action-wrapper,
 .ml2 {
   margin-left: 16px!important
 }
