--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -37172,7 +37172,7 @@ tr.hide {
     line-height: 28px !important;
   }
 }
-._1ty0t5n {
+.become-a-host__count {
   padding-top: 32px !important;
   background-color: #fff !important;
   max-width: 464px !important;
@@ -37180,7 +37180,7 @@ tr.hide {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._s942vn {
+.become-a-host__count-wrapper {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -37202,7 +37202,7 @@ tr.hide {
   width: 100% !important;
   height: 100% !important;
 }
-._5qr45p2 {
+.become-a-host__count-card {
   width: 100% !important;
   -webkit-animation-duration: 0.6s !important;
   animation-duration: 0.6s !important;
@@ -37214,12 +37214,12 @@ tr.hide {
   animation-name: keyframe_14ic1xm !important;
 }
 @media (min-width: 744px) {
-  ._5qr45p2 {
+  .become-a-host__count-card {
     padding: 8px 0 !important;
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  ._5qr45p2 {
+  .become-a-host__count-card {
     -webkit-animation-name: none !important;
     animation-name: none !important;
   }
@@ -43895,7 +43895,7 @@ a:hover {
   line-height: 18px !important;
   margin-top: 2px !important;
 }
-._1mqc21n {
+.become-a-host__count-action-wrapper {
   margin-left: 16px !important;
 }
 .explore-filter-menu__radio-input {
