--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -37796,7 +37796,7 @@ tr.hide {
   justify-content: center !important;
   align-items: center !important;
 }
-._ujh72r {
+.become-a-host__right-checbox-wrapper {
   padding-top: 32px !important;
   background-color: #fff !important;
   max-width: 600px !important;
@@ -37804,15 +37804,15 @@ tr.hide {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._1vy3ikf {
+.become-a-host__checbox-card {
   padding-bottom: 32px !important;
 }
 @media (min-width: 744px) {
-  ._1vy3ikf {
+  .become-a-host__checbox-card {
     padding-bottom: 48px !important;
   }
 }
-._1gf82i06 {
+.become-a-host__checbox-header {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -37832,19 +37832,19 @@ tr.hide {
   animation-name: keyframe_14ic1xm !important;
 }
 @media (min-width: 744px) {
-  ._1gf82i06 {
+  .become-a-host__checbox-header {
     font-size: 22px !important;
     line-height: 26px !important;
     padding-bottom: 24px !important;
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1gf82i06 {
+  .become-a-host__checbox-header {
     -webkit-animation-name: none !important;
     animation-name: none !important;
   }
 }
-._sedfr4 {
+.become-a-host__checbox-header-h2 {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   margin: 0 !important;
@@ -37861,16 +37861,16 @@ tr.hide {
   line-height: 26px !important;
 }
 @media (min-width: 744px) {
-  ._sedfr4 {
+  .become-a-host__checbox-header-h2 {
     padding-right: 16px !important;
   }
 }
-._k5sftg {
+.become-a-host__checbox-header-btn {
   position: relative !important;
   display: inline-block !important;
   top: 4px !important;
 }
-._gb49jh {
+.become-a-host__checbox-list {
   -webkit-animation-duration: 0.6s !important;
   animation-duration: 0.6s !important;
   -webkit-animation-iteration-count: 1 !important;
@@ -37881,12 +37881,12 @@ tr.hide {
   animation-name: keyframe_14ic1xm !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._gb49jh {
+  .become-a-host__checbox-list {
     -webkit-animation-name: none !important;
     animation-name: none !important;
   }
 }
-._v1sw7ev {
+.become-a-host__checbox-note {
   font-size: 16px !important;
   line-height: 24px !important;
   padding-bottom: 32px !important;
@@ -37900,7 +37900,7 @@ tr.hide {
   animation-name: keyframe_1mcv7ov !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._v1sw7ev {
+  .become-a-host__checbox-note {
     -webkit-animation-name: none !important;
     animation-name: none !important;
   }
@@ -38534,7 +38534,7 @@ tr.hide {
     }
   }
 }
-._11waoz2 {
+.become-a-host__checbox-note-link {
   color: var(--parsed-html-color, #222) !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
@@ -42885,7 +42885,7 @@ textarea {
   padding-top: 12px !important;
   padding-left: 64px !important;
 }
-._11waoz2 {
+.become-a-host__checbox-note-link {
   color: var(--parsed-html-color, #222) !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
