renaming photos page - globally changes

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -37905,7 +37905,7 @@ tr.hide {
     animation-name: none !important;
   }
 }
-._w85z74 {
+.become-a-host__right-photos-wrapper {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   -webkit-box-align: center !important;
@@ -37922,7 +37922,7 @@ tr.hide {
   flex-direction: column !important;
 }
 @media (min-width: 744px) {
-  ._1t4bq7g {
+  .become-a-host__photos-content {
     overflow-y: auto !important;
     padding-right: 8px !important;
     margin-right: -8px !important;
@@ -37997,7 +37997,7 @@ tr.hide {
     width: calc(100% + 16px) !important;
   }
 }
-._10gkno6i {
+.become-a-host__photos-large {
   position: relative !important;
   width: 100% !important;
   margin-left: 0 !important;
@@ -38006,33 +38006,33 @@ tr.hide {
   padding-right: 6px !important;
 }
 @media (min-width: 375px) {
-  ._10gkno6i {
+  .become-a-host__photos-large {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 @media (min-width: 744px) {
-  ._10gkno6i {
+  .become-a-host__photos-large {
     width: 100% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 950px) {
-  ._10gkno6i {
+  .become-a-host__photos-large {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._10gkno6i {
+  .become-a-host__photos-large {
     width: 100% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._10gkno6i {
+  .become-a-host__photos-large {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -38107,20 +38107,20 @@ tr.hide {
   font-size: 18px !important;
   line-height: 22px !important;
 }
-._rbccor {
+.become-a-host__right-photos-content {
   position: relative !important;
   margin: 24px 0 !important;
   max-width: 700px !important;
   width: 100% !important;
   background-color: #fff !important;
 }
-._1ecfxbh {
+.become-a-host__right-photos-header {
   position: relative !important;
   max-width: 700px !important;
   width: 100% !important;
   padding-bottom: 24px !important;
 }
-._1hckjaq2 {
+.become-a-host__photos-header-wrapper {
   -webkit-box-pack: justify !important;
   display: flex !important;
   justify-content: space-between !important;
@@ -38130,16 +38130,16 @@ tr.hide {
   animation-fill-mode: both !important;
   animation-name: keyframe_14ic1xm !important;
 }
-._ktd37n {
+.become-a-host__photos-header-text {
   display: flex !important;
   padding-right: 24px !important;
 }
 @media (min-width: 744px) {
-  ._ktd37n {
+  .become-a-host__photos-header-text {
     padding-right: 48px !important;
   }
 }
-._1v7yuiv {
+.become-a-host__photos-header-h2 {
   color: #222 !important;
   font-size: 16px !important;
   line-height: 20px !important;
@@ -38148,12 +38148,12 @@ tr.hide {
   margin: 0 !important;
 }
 @media (min-width: 744px) {
-  ._1v7yuiv {
+  .become-a-host__photos-header-h2 {
     font-size: 22px !important;
     line-height: 26px !important;
   }
 }
-._1ixmdp0 {
+.become-a-host__photos-header-desc {
   color: #717171 !important;
   padding-top: 4px !important;
   font-weight: 400 !important;
@@ -38161,12 +38161,12 @@ tr.hide {
   line-height: 18px !important;
 }
 @media (min-width: 744px) {
-  ._1ixmdp0 {
+  .become-a-host__photos-header-desc {
     font-size: 16px !important;
     line-height: 20px !important;
   }
 }
-._16m3anl {
+.become-a-host__photos-cover {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: horizontal !important;
@@ -38186,7 +38186,7 @@ tr.hide {
   padding-left: 8px !important;
   padding-right: 8px !important;
 }
-._83nzdcg {
+.become-a-host__photos-small {
   position: relative !important;
   width: 100% !important;
   margin-left: 0 !important;
@@ -38195,33 +38195,33 @@ tr.hide {
   padding-right: 6px !important;
 }
 @media (min-width: 375px) {
-  ._83nzdcg {
+  .become-a-host__photos-small {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 @media (min-width: 744px) {
-  ._83nzdcg {
+  .become-a-host__photos-small {
     width: 50% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 950px) {
-  ._83nzdcg {
+  .become-a-host__photos-small {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._83nzdcg {
+  .become-a-host__photos-small {
     width: 50% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._83nzdcg {
+  .become-a-host__photos-small {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -42438,7 +42438,7 @@ tr.hide {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._1fopc40 {
+.become-a-host__photos-img-wrapper {
   margin-bottom: 8px !important;
 }
 .background__img-position-center {
@@ -42544,22 +42544,22 @@ tr.hide {
 ._l8ik20 {
   padding-bottom: 16px !important;
 }
-._100wjs0 {
+.become-a-host__photos-img-full {
   background-color: #f7f7f7 !important;
   display: inline-block !important;
   height: 100% !important;
   width: 100% !important;
 }
-._s63vo4 {
+.become-a-host__photos-more {
   margin-left: auto !important;
   max-height: 32px !important;
   display: flex !important;
 }
-._1p99teo {
+.become-a-host__photos-more-wrapper {
   padding-left: 8px !important;
   opacity: 0.8 !important;
 }
-._1c1qb2i {
+.become-a-host__photos-action {
   -webkit-box-align: center !important;
   align-items: center !important;
   position: absolute !important;
@@ -42570,11 +42570,11 @@ tr.hide {
   padding: 8px !important;
 }
 @media (min-width: 744px) {
-  ._1c1qb2i {
+  .become-a-host__photos-action {
     padding: 16px !important;
   }
 }
-._1k2xyy0 {
+.become-a-host__photos-img-cotainer {
   position: absolute !important;
   inset: 0 !important;
 }
@@ -42583,7 +42583,7 @@ tr.hide {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._vvli20 {
+.become-a-host__upload-img {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   -webkit-box-direction: normal !important;
@@ -42681,7 +42681,7 @@ textarea {
   margin-left: -6px !important;
   margin-right: 4px !important;
 }
-._1ny5tm2 {
+.become-a-host__photos-container {
   margin-bottom: -16px !important;
 }
 ._153y5wk9 {
