--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -38245,7 +38245,7 @@ tr.hide {
   }
 }
 @media (min-width: 744px) {
-  ._145zqbx {
+  .become-a-host__right-preview-wrapper {
     -webkit-box-align: center !important;
     -ms-flex-align: center !important;
     height: -webkit-calc(90vh - -webkit-calc(88px + 82px)) !important;
@@ -38260,16 +38260,16 @@ tr.hide {
     align-items: center !important;
   }
 }
-._hwsulw {
+.become-a-host__preview-img-wrapper {
   background-color: #f7f7f7 !important;
   border-radius: 9px !important;
 }
 @media (min-width: 744px) {
-  ._hwsulw {
+  .become-a-host__preview-img-wrapper {
     border-radius: 24px 24px 0 0 !important;
   }
 }
-._14feh58 {
+.become-a-host__preview-title-wrapper {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ebebeb !important;
@@ -38280,20 +38280,20 @@ tr.hide {
   margin: 0 !important;
 }
 @media (min-width: 744px) {
-  ._14feh58 {
+  .become-a-host__preview-title-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._14feh58:last-child {
+.become-a-host__preview-title-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._14feh58:last-child {
+  .become-a-host__preview-title-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._12halnnq {
+.become-a-host__preview-details-wrapper {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-align: center !important;
@@ -38312,20 +38312,20 @@ tr.hide {
   justify-content: space-between !important;
 }
 @media (min-width: 744px) {
-  ._12halnnq {
+  .become-a-host__preview-details-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._12halnnq:last-child {
+.become-a-host__preview-details-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._12halnnq:last-child {
+  .become-a-host__preview-details-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._15epaj9 {
+.become-a-host__preview-details-h2 {
   font-size: 18px !important;
   line-height: 24px !important;
   word-wrap: break-word !important;
@@ -38333,7 +38333,7 @@ tr.hide {
   font-weight: 600 !important;
   margin-bottom: 0 !important;
 }
-._uhouic5 {
+.become-a-host__preview-status-wrapper {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ebebeb !important;
@@ -38342,20 +38342,20 @@ tr.hide {
   font-weight: 400 !important;
 }
 @media (min-width: 744px) {
-  ._uhouic5 {
+  .become-a-host__preview-status-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._uhouic5:last-child {
+.become-a-host__preview-status-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._uhouic5:last-child {
+  .become-a-host__preview-status-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._1hq6b54x {
+.become-a-host__preview-desc-wrapper {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ebebeb !important;
@@ -38365,20 +38365,20 @@ tr.hide {
   overflow-wrap: break-word !important;
 }
 @media (min-width: 744px) {
-  ._1hq6b54x {
+  .become-a-host__preview-desc-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._1hq6b54x:last-child {
+.become-a-host__preview-desc-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._1hq6b54x:last-child {
+  .become-a-host__preview-desc-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._p42ifwp {
+.become-a-host__preview-aminities-wrapper {
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ebebeb !important;
   font-size: 14px !important;
@@ -38387,26 +38387,26 @@ tr.hide {
   padding-top: 32px !important;
 }
 @media (min-width: 744px) {
-  ._p42ifwp {
+  .become-a-host__preview-aminities-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._p42ifwp:last-child {
+.become-a-host__preview-aminities-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._p42ifwp:last-child {
+  .become-a-host__preview-aminities-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._1o8huzpo {
+.become-a-host__preview-aminities-h2 {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 600 !important;
   margin-bottom: 24px !important;
 }
-._6oxhmf {
+.become-a-host__preview-aminities-ul {
   margin-top: 16px !important;
   margin-bottom: 16px !important;
   padding-bottom: 16px !important;
@@ -38414,7 +38414,7 @@ tr.hide {
   padding-left: 0 !important;
   list-style-type: none !important;
 }
-._6oxhmf:last-child {
+.become-a-host__preview-aminities-ul:last-child {
   border-bottom: none !important;
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
@@ -38422,32 +38422,32 @@ tr.hide {
 .text__color-gray {
   color: #717171 !important;
 }
-._1fbr7oxa {
+.become-a-host__preview-loc-wrapper {
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ebebeb !important;
   padding-top: 32px !important;
 }
 @media (min-width: 744px) {
-  ._1fbr7oxa {
+  .become-a-host__preview-loc-wrapper {
     margin-right: 24px !important;
     margin-left: 24px !important;
   }
 }
-._1fbr7oxa:last-child {
+.become-a-host__preview-loc-wrapper:last-child {
   border-bottom: none !important;
 }
 @media (min-width: 744px) {
-  ._1fbr7oxa:last-child {
+  .become-a-host__preview-loc-wrapper:last-child {
     padding-bottom: 40px !important;
   }
 }
-._1m6reg9 {
+.become-a-host__preview-loc-h2 {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 600 !important;
   margin-bottom: 0 !important;
 }
-._n8ay8e {
+.become-a-host__preview-loc-h3 {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
@@ -38455,7 +38455,7 @@ tr.hide {
   margin-bottom: 0 !important;
   font-weight: 400 !important;
 }
-._192g50s {
+.become-a-host__right-preview-card {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -38472,7 +38472,7 @@ tr.hide {
   margin: auto !important;
 }
 @media (min-width: 744px) {
-  ._192g50s {
+  .become-a-host__right-preview-card {
     border: 1px solid #ebebeb !important;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12) !important;
     width: 336px !important;
@@ -38485,13 +38485,13 @@ tr.hide {
     background-color: #fff !important;
   }
 }
-._ri7k98 {
+.become-a-host__preview-card-content {
   color: #222 !important;
   outline: 0 !important;
   max-width: 100% !important;
 }
 @media (min-width: 744px) {
-  ._ri7k98 {
+  .become-a-host__preview-card-content {
     overflow-y: scroll !important;
     -webkit-overflow-scrolling: touch !important;
     border: 1px solid #ebebeb !important;
@@ -38505,29 +38505,29 @@ tr.hide {
     background-color: #fff !important;
     outline: 0 !important;
   }
-  ._ri7k98::-webkit-scrollbar {
+  .become-a-host__preview-card-content::-webkit-scrollbar {
     -webkit-appearance: none !important;
     display: none !important;
   }
-  ._ri7k98::-moz-focus-inner {
+  .become-a-host__preview-card-content::-moz-focus-inner {
     border: none !important;
     padding: 0 !important;
     margin: 0 !important;
   }
-  ._ri7k98:focus::-moz-focus-inner {
+  .become-a-host__preview-card-content:focus::-moz-focus-inner {
     border: none !important;
   }
-  ._ri7k98:-moz-focusring {
+  .become-a-host__preview-card-content:-moz-focusring {
     outline: 0 !important;
   }
-  ._ri7k98:focus-visible {
+  .become-a-host__preview-card-content:focus-visible {
     -webkit-transition: box-shadow 0.2s !important;
     -moz-transition: box-shadow 0.2s !important;
     transition: box-shadow 0.2s !important;
     box-shadow: 0 0 0 2px #000, 0 2px 4px rgba(0, 0, 0, 0.18) !important;
   }
   @media (prefers-reduced-motion: reduce) {
-    ._ri7k98:focus-visible {
+    .become-a-host__preview-card-content:focus-visible {
       -webkit-transition: none !important;
       -moz-transition: none !important;
       transition: none !important;
@@ -38541,7 +38541,7 @@ tr.hide {
   font-weight: 600 !important;
   text-decoration: underline !important;
 }
-._1fpejbyo {
+.become-a-host__footer-preview-action {
   background-color: #fff !important;
   border-top: 2px solid #222 !important;
 }
@@ -42344,7 +42344,7 @@ tr.hide {
     width: calc((100vw - 260px) - 320px) !important;
   }
 }
-._dxiwe1 {
+.become-a-host__preview-loc-desc {
   font-size: 12px !important;
   line-height: 16px !important;
   color: #717171 !important;
